@@ -50,18 +50,21 @@ gen = [
 	1	10	0	10	-10	1	100	1	10	2	0	20	-12	0	-8	0	0	0	0	0	0;
 	1	10	0	10	-10	1	100	1	10	2	0	20	-12	15	-8	15	0	0	0	0	0;
 	1	10	0	10	-10	1	100	1	10	2	0	20	-12	12	-8	8	0	0	0	0	0;
+	1	10	0	10	-10	1	100	1	10	2	0	20	0	0	-20	20	0	0	0	0	0;
+	1	10	0	10	-10	1	100	1	10	2	0	20	0	0	-22	18	0	0	0	0	0;
+	1	10	0	10	-10	1	100	1	10	2	0	20	0	0	-18	22	0	0	0	0	0;
 ];
 
 t = 'hasPQcap(gen)';
-t_is(hasPQcap(gen), [0;1;1;1;1;1;1;0;1;0;0], 12, t);
+t_is(hasPQcap(gen), [0;1;1;1;1;1;1;0;1;0;0;1;1;1], 12, t);
 
 t = 'hasPQcap(gen, ''B'')';
-t_is(hasPQcap(gen, 'B'), [0;1;1;1;1;1;1;0;1;0;0], 12, t);
+t_is(hasPQcap(gen, 'B'), [0;1;1;1;1;1;1;0;1;0;0;1;1;1], 12, t);
 
 t = 'hasPQcap(gen, ''U'')';
-t_is(hasPQcap(gen, 'U'), [0;1;1;1;0;1;0;0;1;0;0], 12, t);
+t_is(hasPQcap(gen, 'U'), [0;1;1;1;0;1;0;0;1;0;0;1;1;1], 12, t);
 
 t = 'hasPQcap(gen, ''L'')';
-t_is(hasPQcap(gen, 'L'), [0;1;0;1;1;1;1;0;0;0;0], 12, t);
+t_is(hasPQcap(gen, 'L'), [0;1;0;1;1;1;1;0;0;0;0;1;1;1], 12, t);
 
 t_end;
